# majoin

./: .gitignore  README.md
.github/workflows/: deploy-majoin-api.yml  deploy-weather-bot.yml  distribute-app.yml
bots/: README.md
bots/weather-bot/: .env.example  README.md  agent.py  bot.py  requirements.txt  weather.py
bots/weather-bot/deploy/: deploy.sh
client/: .gitignore  README.md  pubspec.yaml
client/android/: settings.gradle.kts
client/android/app/: build.gradle.kts
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart  main.dart
client/lib/core/: config.dart
client/linux/: CMakeLists.txt
client/linux/flutter/: generated_plugins.cmake
client/linux/runner/: my_application.cc
client/test/: widget_test.dart
client/windows/: CMakeLists.txt
docs/: app-distribution.md  custom-api-auth.md  feature-flows.md  group-call-setup.md  livekit-sfu-summary.md  push-setup.md
infra/: VPS_DEPLOY.md  docker-compose.yml
infra/caddy/: Caddyfile
infra/coturn/: turnserver.conf
infra/livekit/: livekit.yaml
infra/scripts/: bootstrap.sh  register-user.sh
infra/sygnal/: sygnal.yaml
infra/systemd/: weather-bot.service
services/majoin/: README.md  alembic.ini  auth.py  db.py  main.py  pyproject.toml  upload_pack.py
services/majoin/alembic/: env.py
services/majoin/alembic/versions/: 0001_initial_schema.py
services/majoin/deploy/: .env.example  deploy.sh  majoin.service
services/sticker-api/: README.md  db.py  main.py  pyproject.toml
tools/sticker-gen/: _gen.py  _genpacks.py
(+74 files in other folders)
