[project]
name = "majoin-api"
version = "0.1.0"
description = "majoin backend API serving stickers and user directories"
requires-python = ">=3.11, <3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
]

[tool.uv]
package = false
